--- a/hw1.ipynb
+++ b/hw1.ipynb
@@ -83,6 +83,37 @@
      "prompt_number": 6
     },
     {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "### Question 3\n",
+      "#### (5 points) Megan wants to buy a designer handbag and plans to earn the money babysitting. \n",
+      "#### Suppose the interest rate is 6% and she is willing to wait one year to purchase the bag. \n",
+      "#### How much babysitting money (to the nearest whole dollar) will she need to earn today to \n",
+      "#### buy the bag for $400 one year from now?"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "fi.rnd(fi.disc(c=400, n=1, r=0.06))"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 8,
+       "text": [
+        "377"
+       ]
+      }
+     ],
+     "prompt_number": 8
+    },
+    {
      "cell_type": "code",
      "collapsed": false,
      "input": [],
