--- a/hw1.ipynb
+++ b/hw1.ipynb
@@ -8,23 +8,22 @@
   {
    "cells": [
     {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "import finance_formulas as fi # import the basic finace functions"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 10
+    },
+    {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
       "# Assignment 1"
      ]
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "# import the basic finace functions\n",
-      "import finance_formulas as fi"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 2
     },
     {
      "cell_type": "markdown",
@@ -97,21 +96,50 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "fi.rnd(fi.disc(c=400, n=1, r=0.06))"
+      "money_needed = fi.disc(c=400, n=1, r=0.06)\n",
+      "print round(money_needed)"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [
       {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 8,
+       "output_type": "stream",
+       "stream": "stdout",
        "text": [
-        "377"
+        "377.0\n"
        ]
       }
      ],
-     "prompt_number": 8
+     "prompt_number": 16
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Now lets compute $sin^2(2x)$ for $ x = 20$"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "import math\n",
+      "x = 20\n",
+      "y = (math.sin(2*x))**2\n",
+      "print y"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "0.55519362192\n"
+       ]
+      }
+     ],
+     "prompt_number": 21
     },
     {
      "cell_type": "code",
