--- a/hw4.ipynb
+++ b/hw4.ipynb
@@ -333,7 +333,7 @@
       "investment  = 100e3 # New tech. cost\n",
       "\n",
       "# Cashflows: Investment and the delta of new and old revenues\n",
-      "cf = [-investment] + ([0] * life)\n",
+      "cf = [-investment] + [0]*life\n",
       "for i in range(life): cf[i+1] = rev_new[i] - rev_old[i]\n",
       "npv = fi.npv(cf, r)\n",
       "\n",
@@ -345,13 +345,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 13,
+       "prompt_number": 22,
        "text": [
         "74689"
        ]
       }
      ],
-     "prompt_number": 13
+     "prompt_number": 22
     },
     {
      "cell_type": "markdown",
@@ -465,7 +465,7 @@
       "price_h    = 110e3                          # $110,000 purchase price\n",
       "maint_h    = 4e3                            # $4,000/yr maintenance\n",
       "life_h     = 7                              # 7 years lifetime\n",
-      "cf_h       = [price_h] + [maint_h] * life_h # cashflow for life of furnace\n",
+      "cf_h       = [price_h] + [maint_h]*life_h   # cashflow for life of furnace\n",
       "npv_h      = fi.npv(cf_h, r)                # npv of cashflow at 6% \n",
       "ann_cost_h = fi.pmt(npv_h, life_h, r)       # annulaized cost computed as payments\n",
       "\n",
@@ -473,7 +473,7 @@
       "price_l    = 60e3                           # $60,000 purchase price\n",
       "maint_l    = 7.5e3                          # $7,500/yr maintenance\n",
       "life_l     = 4                              # 4 years lifetime\n",
-      "cf_l       = [price_l] + [maint_l] * life_l # cashflow for life of furnace\n",
+      "cf_l       = [price_l] + [maint_l]*life_l   # cashflow for life of furnace\n",
       "npv_l      = fi.npv(cf_l, r)                # npv of cashflow at 6% \n",
       "ann_cost_l = fi.pmt(npv_l, life_l, r)       # annulaized cost computed as payments\n",
       "\n",
@@ -490,12 +490,21 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 20,
+       "prompt_number": 21,
        "text": [
         "'(H, 23705)'"
        ]
       }
      ],
+     "prompt_number": 21
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
      "prompt_number": 20
     },
     {
